--- a/templates/Mdata.html
+++ b/templates/Mdata.html
@@ -13,16 +13,12 @@
             {{ table|safe }}
 {% endfor %}
 
-<h2>Number Of Patients In Each Risk Category</h2>
+<h2>Plots based on the risk category</h2>
 <img src = "/plot3" >
 
-
-<h2>Analysis In Age on Risk Level</h2>
-<img src = "/boxplot3" >
-
-
-<h2>Correlation</h2>
+<h2>Corelation </h2>
 <img src = "/cor3" >
+
 
 </body>
 </html>
