--- a/templates/Bdata.html
+++ b/templates/Bdata.html
@@ -17,8 +17,7 @@
 
 
 <h2>Correlation</h2>
-<img src = "/cor1" >
-
+<img src="data:image/png;base64, {{ cor_plot }}">
 
 <h2>Sampling</h2>
 
@@ -37,7 +36,7 @@
 {% endfor %}
 
 <h2>Feature Importance</h2>
-<img src = "/imp1" >
+<img src="data:image/png;base64, {{ feature_imp }}">
 
 <h3>Prediction</h3>
  <div class="container">
@@ -73,5 +72,10 @@
  </div>
  </div>
 <p>features: {{  feat }}</p>
+
+<h2>Cluster</h2>
+
+<img src="data:image/png;base64, {{ scatter_plot }}">
+
 </body>
 </html>
