--- a/templates/Diabetes.html
+++ b/templates/Diabetes.html
@@ -20,8 +20,7 @@
 
 
 <h2>Correlation</h2>
-<img src = "/cor2" >
-
+<img src="data:image/png;base64, {{ cor_plot }}">
 <h2>Sampling</h2>
 
 <h3>Shapes of the data frame after sampling</h3>
@@ -40,17 +39,19 @@
 
 
 <h2>Feature Importance</h2>
-<img src = "/imp2" >
+<img src="data:image/png;base64, {{ feature_imp }}">
 
 <h3>Prediction</h3>
  <div class="container">
  <div class="tableLeft">
+ <h4>Prediction without normalization </h4>
 {% for table in pred_output %}
             {{ table|safe }}
 {% endfor %}
  </div>
 
  <div class="tableRight">
+ <h4>Prediction with normalization </h4>
 {% for table in pred_output_norm %}
             {{ table|safe }}
 {% endfor %}
