--- a/templates/Mdata.html
+++ b/templates/Mdata.html
@@ -17,7 +17,7 @@
 <img src = "/plot3" >
 
 <h2>Corelation </h2>
-<img src = "/cor3" >
+<img src="data:image/png;base64, {{ cor_plot }}">
 
 <h2>Sampling</h2>
 
@@ -36,17 +36,19 @@
 {% endfor %}
 
 <h2>Feature Importance</h2>
-<img src = "/imp3" >
+<img src="data:image/png;base64, {{ feature_imp }}">
 
 <h3>Prediction</h3>
  <div class="container">
  <div class="tableLeft">
+ <h4>Prediction without normalization </h4>
 {% for table in pred_output %}
             {{ table|safe }}
 {% endfor %}
  </div>
 
  <div class="tableRight">
+ <h4>Prediction with normalization </h4>
 {% for table in pred_output_norm %}
             {{ table|safe }}
 {% endfor %}
