--- a/templates/Mdata.html
+++ b/templates/Mdata.html
@@ -38,22 +38,23 @@
 <h2>Feature Importance</h2>
 <img src="data:image/png;base64, {{ feature_imp }}">
 
-{#<h3>Prediction</h3>#}
-{# <div class="container">#}
-{# <div class="tableLeft">#}
-{# <h4>Prediction without normalization </h4>#}
-{#{% for table in pred_output %}#}
-{#            {{ table|safe }}#}
-{#{% endfor %}#}
-{# </div>#}
-{##}
-{# <div class="tableRight">#}
- <h4>Prediction with normalization </h4>
+
+ <h4>Predictions without parameter tuning </h4>
 {% for table in pred_output_norm %}
             {{ table|safe }}
 {% endfor %}
- </div>
- </div>
+
+<h4>Prediction with parameter tuning </h4>
+{% for table in parameter_tun %}
+            {{ table|safe }}
+{% endfor %}
+ <h2>Clasification Report </h2>
+{% for table in  clasif_report %}
+            {{ table|safe }}
+{% endfor %}
+
+<img src="data:image/png;base64, {{img_report}}">
+ <h2>Plot Shap summary </h2>
 
 </body>
 </html>
