--- a/templates/home.html
+++ b/templates/home.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home Page</title>
+    <title>Medical data Investigation</title>
 </head>
 <body>
-<h1> Home Page</h1>
+<h1> Medical data Investigation</h1>
  {% for item in nav.top %}
     <li class="{{ 'active' if item.is_active else '' }}">
         <a href="{{ item.url }}">{{ item.label }}</a>
